1.1.0
* Pinning FaunaDB API version to 2.0
* Adds support for user classes serialization
* Adds support for @query type

1.0.0
* Official release

0.1.3
* Adds support for At() function
* Adds support for @bytes type
* Adds KeyFromSecret() function
* Change default cloud url to https://db.fauna.com

0.1.2
* Adds PermissionDenied exception
* Uses NUnit adapter to run tests on Visual Studio
* Removes Count() function
* Adds Database(), Index(), Class() reference constructor functions
* Adds CreateClass(), CreateDatabase(), CreateIndex() and CreateKey() functions

0.1.1
* Change default cloud url to https://cloud.faunadb.com

0.1.0
* First public release
